AvaTax4ServiceMax/src/objects/AvaMessage__c.object
<CustomObject>
    <fields>
        <fullName>Increment__c</fullName>
        <label>Increment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MsgLine1__c</fullName>
        <label>MsgLine1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MsgLine2__c</fullName>
        <label>MsgLine2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MsgLine3__c</fullName>
        <label>MsgLine3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReturnPage__c</fullName>
        <label>ReturnPage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeStamp__c</fullName>
        <label>TimeStamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>UserMessage</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AvaMessage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UserMessages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>